# formae

./: .env.example  .gitignore  Cargo.toml  README.md  TRADEMARKS.md  biome.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-pages.yml  public-catalog.yml  publish-extension-stores.yml  release-extension.yml  verify-extension-release.yml
apps/desktop/: README.md  package.json
apps/extension/: README.md  manifest.json  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/crypto/: Cargo.toml
crates/domain/: Cargo.toml
crates/parser/: Cargo.toml
crates/rules/: Cargo.toml
crates/test_fixtures/: Cargo.toml
crates/wasm_core/: Cargo.toml
crates/wasm_core/src/: lib.rs
docs/: architecture.md  extension-release-engineering.md
docs/adr/: 0001-static-first-web-shell.md  0002-github-pages-primary.md  0003-no-server-pii.md  0004-local-extension-sync.md  0005-rust-first-shared-core.md  0006-indexeddb-webcrypto-vault.md  0007-passkey-local-unlock-only.md  0008-manual-import-fallback.md  0009-selector-versioning-fixtures.md  0010-opt-in-technical-telemetry.md
fixtures/public/: ihac-ufba-timetable.html  sigaa-public-turmas.html  sigaa-root.html  ufba-sim-schedule-codes.html
infra/private-sync-e2e/: .env.example  .gitignore  (+4 more)
scripts/: audit-extension-package.mjs  generate-extension-icons.py  generate-store-screenshots.py  package-extension.mjs  publish-chrome-webstore.mjs  publish-firefox-amo.mjs  smoke-extension-runtime.mjs  sync-wasm.mjs  verify-extension-release.mjs
(+125 files in other folders)
