[workspace]
members = [
  "crates/domain",
  "crates/parser",
  "crates/rules",
  "crates/crypto",
  "crates/wasm_core",
  "crates/test_fixtures",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Mentorzx/formae"
authors = ["Mentorzx"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.105"

