[package]
name = "formae-wasm-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bridge for the Formae Rust core."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
formae-domain = { path = "../domain" }
formae-parser = { path = "../parser" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen.workspace = true
